# ChangeLog for x11-terms/cxterm
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/cxterm/ChangeLog,v 1.15 2011/07/17 20:35:28 maekke Exp $

  17 Jul 2011; Markus Meier <maekke@gentoo.org> cxterm-5.2.3-r1.ebuild:
  x86 stable, bug #374577

  09 Jul 2011; Samuli Suominen <ssuominen@gentoo.org> cxterm-5.2.3-r1.ebuild:
  Fix include guard with recent libX11 wrt #349448 by Diego Elio Pettenò

*cxterm-5.2.3-r1 (19 Sep 2010)

  19 Sep 2010; Jeroen Roovers <jer@gentoo.org> +cxterm-5.2.3-r1.ebuild:
  Add missing dependencies. Respect LDFLAGS (bug #336301), CC, CFLAGS,
  mainly by running eautoreconf, and also remove a weird redefinition of
  malloc(), calloc() and realloc(). Use emake instead of make.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; cxterm-5.2.3.ebuild:
  Drop virtual/x11 references.

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  13 Feb 2006; Alastair Tse <liquidx@gentoo.org> metadata.xml,
  -cxterm-5.2.2.ebuild, cxterm-5.2.3.ebuild:
  modular-x-ified

  25 Dec 2005; Mamoru KOMACHI <usata@gentoo.org> cxterm-5.2.3.ebuild:
  Cosmetic change and regenerate distfiles checksum. Fix no available
  pty's problem. (source site tarball changed)

  28 Jun 2004; Aron Griffis <agriffis@gentoo.org> cxterm-5.2.2.ebuild,
  cxterm-5.2.3.ebuild:
  sync IUSE, add sed-4 dep

  19 Jun 2004; <pyrania@gentoo.org> cxterm-5.2.3.ebuild:
  Added IUSE.

  27 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> cxterm-5.2.3.ebuild:
  don't assign default to S

*cxterm-5.2.3 (26 Jan 2004)

  26 Jan 2004; Markus Nigbur <pyrania@gentoo.org> cxterm-5.2.2.ebuild,
  cxterm-5.2.3.ebuild:
  Version bump, marked 5.2.2 stable on x86.

*cxterm-5.2.2 (09 Oct 2002)

  09 Oct 2002; Stuart Bouyer <stubear@gentoo.org> cxterm-5.2.2.ebuild,
  digest-cxterm-5.2.2 :

  Initial ebuild submitted by zhu5@purdue.edu (Jianghai Zhu)