@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/cxterm
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/cxterm/ChangeLog,v 1.15 2011/07/17 20:35:28 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/cxterm/ChangeLog,v 1.16 2011/10/14 20:59:42 ssuominen Exp $
+
+  14 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -cxterm-5.2.3.ebuild:
+  old
 
   17 Jul 2011; Markus Meier <maekke@gentoo.org> cxterm-5.2.3-r1.ebuild:
   x86 stable, bug #374577
